fix css id overlap

--- a/core/css/style.css
+++ b/core/css/style.css
@@ -485,7 +485,7 @@ div#gymPrestige{
 	font-size: 14px;
 }
 
-div#gymHistory{
+div#gymHistoryLink{
 	position: absolute;
 	left: 220px;
 	top: 70px;
